# nixops-grafana

./: LICENSE  README.md  default.nix  mypy.ini  overrides.nix  pyproject.toml  release.nix  setup.cfg
.github/workflows/: ci.yaml  ci.yml
ci/: check-mypy.sh  shell.nix
examples/: trivial-grafana-dashboard.nix
nixops_grafana/: grafana_utils.py  plugin.py
nixops_grafana/nix/: common-grafana-options.nix  default.nix  grafana-dashboard.nix  grafana-data-source.nix  grafana-folder.nix  grafana-notification-channel.nix  grafana-organization.nix
nixops_grafana/resources/: __init__.py  grafana_dashboard.py  grafana_folder.py
nixops_grafana/resources/types/: grafana_dashboard.py  grafana_folder.py
