[tool.poetry]
name = "nixops_grafana"
version = "1.0"
description = "NixOps plugin for Grafana visualization tool"
authors = ["Tewfik Ghariani <ghariani.tewfik@gmail.com>"]
license = "MIT"
include = [ "nixops_grafana/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.8.3"
grafana-api = "1.0.3"
grafanalib = "0.5.9"
nixops = {git = "https://github.com/NixOS/nixops.git"}

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mypy = "^0.790"
black = "^20.8b1"

[tool.poetry.plugins."nixops"]
grafana = "nixops_grafana.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
