[tool.poetry]
name = "nixops_grafana"
version = "1.0"
description = "NixOps plugin for Grafana visualization tool"
authors = ["Tewfik Ghariani <ghariani.tewfik@gmail.com>"]
license = "MIT"
include = [ "nixops_grafana/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.9.0"
grafana-client = "^2.1.0"
grafanalib = "^0.6.1"
nixops = {git = "https://github.com/NixOS/nixops.git"}

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mypy = "^0.931"
black = "^22.1.0"

[tool.poetry.plugins."nixops"]
grafana = "nixops_grafana.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
